--- a/example2/requirements.txt
+++ b/example2/requirements.txt
@@ -7,12 +7,16 @@ dotenv==0.9.9
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 greenlet==3.2.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+msgpack==1.1.0
 pycparser==2.22
+pynvim==0.5.2
 python-dotenv==1.1.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 Werkzeug==3.1.3
+WTForms==3.2.1
