--- a/work/final/requirements.txt
+++ b/work/final/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.8
 dotenv==0.9.9
 Flask==3.1.0
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-Principal==0.4.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
